# waybar-module-pacman-updates

./: Cargo.toml  README.md  installer.sh
src/: lib.rs  main.rs
tests/: unit_tests.rs
