[package]
name = "waybar-module-pacman-updates"
description = "waybar module for Arch to show system updates available"
version = "0.2.5"
edition = "2021"
exclude = ["target", "Cargo.lock", "screenshot.png"]
readme = "README.md"
repository = "https://github.com/coffebar/waybar-module-pacman-updates"
license="GPL-3.0-or-later"
keywords = ["cli", "waybar", "wayland", "linux", "archlinux"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
