[package]
name = "waybar-module-pacman-updates"
description = "waybar module for Arch to show system updates available"
version = "0.2.9"
edition = "2021"
exclude = ["target", "Cargo.lock", "screenshot.png"]
readme = "README.md"
repository = "https://github.com/coffebar/waybar-module-pacman-updates"
license="GPL-3.0-or-later"
keywords = ["cli", "waybar", "wayland", "linux", "archlinux"]

[[bin]]
name = "waybar-module-pacman-updates"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lenient_semver = { version = "0.4.2", features = ["version_lite"] }
ureq = { version = "2.10", features = ["json"] }
regex = "1.11.3"
hex_color = "3.0.0"
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive", "cargo", "wrap_help"] }
either = "1.15.0"
tokio = { version = "1.47.1", features = ["full"] }
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
