[package]
name = "waybar-module-pacman-updates"
description = "waybar module for Arch to show system updates available"
version = "0.2.12"
edition = "2021"
exclude = ["target", "Cargo.lock", "screenshot.png"]
readme = "README.md"
repository = "https://github.com/coffebar/waybar-module-pacman-updates"
license="GPL-3.0-or-later"
keywords = ["cli", "waybar", "wayland", "linux", "archlinux"]

[[bin]]
name = "waybar-module-pacman-updates"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpm = "5.0"
lazy_static = "1.4"
lenient_semver = "0.4.2"
ureq = { version = "2.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
